{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 13,
  "lineage": "fbc7aeec-188f-c992-369a-c23f050c42a1",
  "resources": [
    {
      "module": "module.database",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.243.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-10-25T14:18:06.144-07:00",
            "id": "projects/konecta-task-467513/global/addresses/private-ip-range",
            "name": "private-ip-range",
            "network": "https://www.googleapis.com/compute/v1/projects/konecta-task-467513/global/networks/store-vpc",
            "prefix_length": 16,
            "project": "konecta-task-467513",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/konecta-task-467513/global/addresses/private-ip-range"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-25T14:18:06.761-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/konecta-task-467513/global/firewalls/store-vpc-allow-http",
            "log_config": [],
            "name": "store-vpc-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/konecta-task-467513/global/networks/store-vpc",
            "priority": 1000,
            "project": "konecta-task-467513",
            "self_link": "https://www.googleapis.com/compute/v1/projects/konecta-task-467513/global/firewalls/store-vpc-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-10-25T14:18:06.129-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/konecta-task-467513/global/firewalls/store-vpc-allow-internal",
            "log_config": [],
            "name": "store-vpc-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/konecta-task-467513/global/networks/store-vpc",
            "priority": 1000,
            "project": "konecta-task-467513",
            "self_link": "https://www.googleapis.com/compute/v1/projects/konecta-task-467513/global/firewalls/store-vpc-allow-internal",
            "source_ranges": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/konecta-task-467513/global/networks/store-vpc",
            "mtu": 0,
            "name": "store-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "konecta-task-467513",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/konecta-task-467513/global/networks/store-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-25T14:18:06.714-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/konecta-task-467513/regions/us-central1/subnetworks/store-vpc-subnet-backend",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "store-vpc-subnet-backend",
            "network": "https://www.googleapis.com/compute/v1/projects/konecta-task-467513/global/networks/store-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "konecta-task-467513",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/konecta-task-467513/regions/us-central1/subnetworks/store-vpc-subnet-backend",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-25T14:18:06.646-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/konecta-task-467513/regions/us-central1/subnetworks/store-vpc-subnet-database",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "store-vpc-subnet-database",
            "network": "https://www.googleapis.com/compute/v1/projects/konecta-task-467513/global/networks/store-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "konecta-task-467513",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/konecta-task-467513/regions/us-central1/subnetworks/store-vpc-subnet-database",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main_vpc"
          ]
        }
      ]
    }
  ]
}